public/assets/scss/custom/custom.scss
@import "./dropdown.scss";
@import "./slider.scss";
@import "./why_choose_us.scss";
@import "./landing.scss";
@import "./range-slider.scss";
@import "./tabs.scss";
@import "./footer_improvements.scss";
@import "./categories_dropdown.scss";

$sidebar-width-left: 105px;
$navbar-height-top: 85px;
$canvas-z-index: 8;

.react-datepicker-popper {
  z-index: 12 !important;
}

.trainee-dashboard {
  // position: absolute !important;
  display: flex;
  justify-content: center;
  width: -webkit-fill-available;
}

.parent-container {
  display: flex !important;
  justify-content: center !important;
  align-items: center !important;
}

// modal view css
.react-strap-modal-full {
  height: 100% !important;
  max-width: 100% !important;
  margin-top: 0% !important;
  margin-bottom: 0% !important;
  overflow: hidden !important;

  .modal-content {
    height: 100vh !important;
    overflow: auto;
  }
}

//grid view css
.cardimg {
  width: 136px;
  height: 128px;
  border-radius: 15px;
}

.rating {
  justify-content: flex-end !important;
}

@media (min-width: 576px) {
  //   .cardimg {
  //     width: 90% !important; /* Cover full viewport height */

  //   }
  //   .rating{
  //     justify-content: start !important;
  //   }
  html.style6 .container-sm, html.style6 .container, html.style5 .container-sm, html.style5 .container, html.style4 .container-sm, html.style4 .container, html.style3 .container-sm, html.style3 .container, html.style2 .container-sm, html.style2 .container, html.style1 .container-sm, html.style1 .container, .container-sm, .container{
    max-width:100%
  }

}

@media (min-width: 768px) {

  .rating {
    justify-content: flex-end !important;
  }
}

@media (max-width: 992px) {
  .rating {
    justify-content: end !important;
  }
}

@media (max-width: 1392px) {
  .col-xl-2 {
    margin-left: 0px !important;
    margin-right: 0px !important;
  }
}

.custom-card {
  // min-width: 99% !important;
  // width: 89vw !important;
  margin-top: 18px !important;
}

.custom-react-strap-modal-full {
  display: flex !important;
  width: 100% !important;
  height: 100vh !important;
  max-width: 100% !important;
  // margin-top: 0% !important;
  margin: auto;
  .modal-content {
    background: rgba(255, 255, 255, 0.3) !important; /* Translucent white background */
      backdrop-filter: blur(10px) !important; /* Apply blur effect */
    height: 100vh !important;
    overflow-x: auto !important;
  }
}

@media (min-width: 720px) and (max-width: 1280px) {
  .custom-react-strap-modal-full {
    height: 100vh !important;
    /* Cover full viewport height */
    max-height: 100%;
    /* Limit to the parent's height, if necessary */
    overflow-x: hidden;
    /* Hide horizontal overflow */
  }
}



.custom-trainer-details-scroll {
  height: 90vh !important;
  min-height: 90vh !important;
  overflow-x: auto;
}

.model-tablet-view {
  height: 84vh !important;
  overflow-x: auto;
}

// call view css

::placeholder {
  color: gray !important;
  opacity: 1;
}

:-ms-input-placeholder {
  color: gray !important;
}

::-ms-input-placeholder {
  color: gray !important;
}

.full-height {
  height: 100vh !important;
}

.call-action-buttons {
  // position: absolute !important;
  // bottom: 0;
  // left: 0;
  // right: 0;
  text-align: center;
}

.video-canvas {
  /* height: 480px !important;
    width: 640px!important; */
}

.canvas-container {
  /* width: 100% !important; */
}

.remote-user {
  position: inherit;
  width: 100%;
  /* Set the width of the parent container to 100% */
  height: 100%;
  /* Set the height of the parent container to 100% */
}

// .canvas-print,
// .bg-video {
//   position: absolute;
//   width: 100%; /* Set the width of the canvas and video to 100% of their parent container */
//   height: 100%; /* Set the height of the canvas and video to 100% of their parent container */
//   top: 0;
//   left: 0;
// }



// .canvas-print {
//   left: $sidebar-width-left + 55px !important;
// }

.bg-video {
  position: absolute;
  left: $sidebar-width-left;
  top: $navbar-height-top - 55px;
  width: 90vw;
  top: 5%;
  height: 90vh;
}

// .bg-video {
//   object-fit: cover; /* Maintain aspect ratio; cover entire area even if it means cutting off parts of the video */
//   height: 104vh;
// }

.canvas-print {
  z-index: $canvas-z-index !important;
}

#end-user-video {
  height: 250px;
  width: 250px;
}

.absolute {
  position: absolute;
}

.bottom-0 {
  bottom: 0 !important;
}

.right-2 {
  right: 2px !important;
}

.z-50 {
  z-index: $canvas-z-index;
}

.rounded {
  border-radius: 20px;
}

.flex {
  display: flex;
}

.bottom-0 {
  bottom: 0px;
}

.left-21 {
  left: 10%;
}

.items-center {
  align-items: center;
}

//   for small screen
@media only screen and (max-width: 600px) {
  #end-user-video {
    height: 150px;
    width: 150px;
  }

  .bg-video {
    left: 20px;
  }


  .left-21 {
    left: 15%;
    bottom: 6%;
  }
 
    .custom-react-strap-modal-full {
      height: 100vh !important;
      width: 100vw !important;
      max-width: 100% !important;
      margin: 0px !important;
      /* Cover full viewport height */
      max-height: 100%;
      /* Limit to the parent's height, if necessary */
      overflow-x: hidden;
      /* Hide horizontal overflow */
      .modal-content {
        height: 100vh !important;
        overflow-x: auto !important;
      }
    }
 
}


//   for small screen
@media only screen and (max-width: 920px) {
  #end-user-video {
    height: 150px;
    width: 150px;
  }

  .bg-video {
    left: $sidebar-width-left + 10px !important;
  }


  .left-21 {
    left: 15%;
    bottom: 6%;
  }

  .no-user-joined {
    font-size: 14px !important;
    padding: 0px !important;
  }
}

@media only screen and (max-width: 1000px) {

  .no-user-joined {
    font-size: 14px !important;
    padding: 0px !important;
  }
}

.no-user-joined {
  top: 30px;
  font-size: 20px;
  z-index: $canvas-z-index;
  background: white;
  padding: 20px;
}
/* ... */

